# deep-transcribe

./: .copier-answers.yml  .env.template  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.agents/skills/deep-transcribe/: SKILL.md
.agents/skills/deep-transcribe/agents/: openai.yaml
.github/workflows/: ci.yml  publish.yml
.tbd/: config.yml
.tbd/data-sync/issues/: is-01kgrwrwpe7nn5m6zvc4mkpsp4.md  is-01kgrws40k5wmfz5sddz8whbvy.md  is-01kgrws7my5fefbghn3b62fg75.md  is-01kgrwsb472am6345sp2fvghp8.md  is-01kgrwsf1seq1sg228y2zrx1nv.md  is-01kgrwvpp4pwx1bhdebw7xe8hp.md  is-01kgrx3az4cdkhd04xzq23n2zz.md  is-01kgt1rvd6maej0g7w3qef15bt.md  is-01kgt1s3c9wtt7ytpkaz1j53s3.md  is-01kgt1sb0sgwmtdrdp56ypd7fy.md  is-01kgt1sj7yjfpqqyvndsynexfm.md  is-01kgt1sv77mrswqjdwcg1xjpjr.md  is-01kgt1t48awntstmf753x7mg05.md  is-01kxa4n2ngtn4sthy8cm7gkzyv.md  is-01kxa54kfa6wcwccw4cwdn8vwz.md  is-01kxa5cf2nzw63npnfwmkcqagj.md  is-01kxa5cfax7r8hcjzt5c0xc1kg.md  is-01kxf3q82h8nyx7k4kjjhk27yr.md  is-01kxhe5pq7df6tyah55ydk77ay.md  is-01kxhkv8bbgp650a4bzxxp63nq.md  is-01kxhs6cd2dek60wvv6h290z03.md  is-01kxj4xxyfwmxmk3z9mebcf92x.md  is-01kxj4zk78w2hqjxhg70jcrbyd.md  is-01kxj4zkkb6e68kpa6x3bvs2zp.md  is-01kxj4zkw8vp8g4ebs496hwdgw.md  is-01kxj5t1w964tpzxfx8eacf734.md  is-01kxj8kybb14nmge2eq43qt0pq.md  is-01kxj8kybch3y98k47rphvdw9s.md  is-01kxj8kybch3y98k47rphvdw9t.md  is-01kxj8kybch3y98k47rphvdw9v.md  is-01kxj8kybch3y98k47rphvdw9w.md  is-01kxj8kybch3y98k47rphvdw9x.md  is-01kxj8kybch3y98k47rphvdw9y.md  is-01kxj8kybch3y98k47rphvdw9z.md  is-01kxj8kybch3y98k47rphvdwa0.md  is-01kxj951e67pw82pex30hhhj74.md  is-01kxja8jm21m1a0jyw0tdc7aqv.md  is-01kxjaq0b6qbc56qsyemfq06qa.md  is-01kxjaq0ksv5jkjkm9r02x38wt.md  is-01kxjaq0trtms6w1nqbkrq2yxd.md  (+1 more)
.tbd/data-sync/mappings/: ids.yml
.tbd/workspaces/outbox/issues/: is-01kgrwrwpe7nn5m6zvc4mkpsp4.md  is-01kgrws40k5wmfz5sddz8whbvy.md  is-01kgrws7my5fefbghn3b62fg75.md  is-01kgrwsb472am6345sp2fvghp8.md  is-01kgrwsf1seq1sg228y2zrx1nv.md  is-01kgrwvpp4pwx1bhdebw7xe8hp.md  is-01kgrx3az4cdkhd04xzq23n2zz.md  is-01kgt1rvd6maej0g7w3qef15bt.md  is-01kgt1s3c9wtt7ytpkaz1j53s3.md  is-01kgt1sb0sgwmtdrdp56ypd7fy.md  is-01kgt1sj7yjfpqqyvndsynexfm.md  is-01kgt1sv77mrswqjdwcg1xjpjr.md  is-01kgt1t48awntstmf753x7mg05.md
.tbd/workspaces/outbox/mappings/: ids.yml
docs/: development.md  installation.md  publishing.md  transcription-context-design.md
docs/project/specs/active/: plan-2026-02-06-modernize-and-release.md  plan-2026-02-06-simplify-and-polish.md
skills/deep-transcribe/: SKILL.md
src/deep_transcribe/: __init__.py  claude_skill.py  cli_commands.py  cli_main.py  deep_transcribe_cli.py  model_profiles.py  speaker_correction.py  transcribe_commands.py  transcribe_options.py  transcription.py  transcription_metadata.py
src/deep_transcribe/skills/: SKILL.md
tests/: e2e-cli.tryscript.md  e2e-test.runbook.md  manual-e2e-test.md  test_cli.py  test_transcribe_options.py
